--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": ""
+    "build": "gulp build",
+    "watch": "gulp watch"
   },
   "dependencies": {
     "handsontable": "^2.0.0"
