gulp watch handle errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,10 @@
       "error",
       "always-multiline"
     ],
+    "eol-last": [
+      "error",
+      "always"
+    ],
     "eqeqeq": [
       "error"
     ],
