--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
+    "eslint": "^4.19.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
-    "gulp-uglifycss": "^1.0.9"
+    "gulp-uglifycss": "^1.0.9",
+    "gulp-util": "^3.0.8"
   }
 }
